--- a/Trabalho_1/kaua_cod.ipynb
+++ b/Trabalho_1/kaua_cod.ipynb
@@ -452,7 +452,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.5)",
+   "display_name": ".conda",
    "language": "python",
    "name": "python3"
   },
@@ -466,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
